# map-gpt-embeddings

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
map_gpt_embeddings/: __init__.py  cookbook.py  mappers.py  stream.py  tap.py
map_gpt_embeddings/sdk_fixes/: mapper_base.py  messages.py
singer_openai/: __init__.py  mappers.py  openai_helpers.py  streams.py  tap.py
tap_beautifulsoup/: deduping_stream.py  documents_parser.py  streams.py  tap.py
tap_knowledge_base_nlp/: client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
